fix to alignment of uploaded images

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3135,7 +3135,6 @@ textarea.form-control {
 	width: 64px;
 	height: 64px;
 	border: 1px dashed $gray-lighter;
-	margin-left: 10px;
 	float: left;
 	.tf-icon {
 		position: absolute;
